# homelab

./: .ansible-lint  .editorconfig  .envrc.example  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  CLAUDE.md  LICENSE  README.md  ansible.cfg  pyproject.toml  renovate.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  sync-bastion.yml
bastion/: README.md
bastion/ansible/: deploy.yml  inventory.yml
bastion/terraform/: main.tf  outputs.tf
caddy/: README.md
caddy/ansible/: deploy.yml  inventory.yml
caddy/docs/: runbook-https-internal.md
caddy/terraform/: main.tf  outputs.tf  providers.tf  variables.tf
dockhost/: README.md  ansible.cfg  docs.md
dockhost/ansible/: deploy.yml  inventory.yml
dockhost/terraform/: main.tf  outputs.tf  providers.tf  terraform.tfvars.example  variables.tf
docs/: 00-getting-started.md  01-architecture.md  02-services.md  03-commandes.md  04-troubleshooting.md  05-dockhost-structure.md  README.md  mode-op-bastion-remote-execution.md
docs/adr/: bastion.md  (+3 more)
github-terraform/: data_sources.tf  main.tf  outputs.tf  providers.tf  terraform.tfvars.example  variables.tf
gitlab-terraform/: main.tf  outputs.tf  providers.tf  variables.tf
kubecluster/: README.md  ansible.cfg
ovh-dns-terraform/: main.tf  outputs.tf  providers.tf  variables.tf
pihole/: README.md  ansible.cfg
proxmox/: .env.example  README.md  SHA256SUMS  ansible.cfg
scripts/: ansible-vault-pass.sh  check_ansible_vault.sh
vpngate/: README.md
(+170 files in other folders)
