[project]
name = "homelab"
version = "0.1.0"
description = "Homelab infrastructure as code - Proxmox, Docker (dockhost), Kubernetes (kubecluster)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ansible>=13.2.0",
    "ansible-lint>=26.1.0",
    "jmespath>=1.0.1",
    "pre-commit>=4.5.1",
]
